src/test/ui/libstd-case-typo/any.stderr
error[E0412]: cannot find type `Typeid` in this scope
  --> $DIR/any.rs:4:20
   |
LL | fn test_typeid(_x: Typeid){}
   |                    ^^^^^^ not found in this scope
   |
help: did you mean `std::any::TypeId`?
   |
LL | fn test_typeid(_x: std::any::TypeId){}
   |                    ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
