src/test/ui/libstd-case-typo/any.rs
// checks case typos with libstd::any structs
fn main(){}

fn test_typeid(_x: Typeid){}
//~^ ERROR: cannot find type `Typeid` in this scope
